[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "topolift-mcp"
version = "0.2.0"
description = "MCP server exposing TopoLift's atom-grounded negotiation reasoning to any MCP-compatible agent (Claude Code, Cursor, OpenAI Agents SDK, etc)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "TopoLift", email = "atoms@topolift.ai" },
]
keywords = ["mcp", "topolift", "negotiation", "agent", "atoms"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0",
    "httpx>=0.25",
    "pydantic>=2.0",
    "uvicorn>=0.27",
]

[project.urls]
Homepage = "https://topolift.ai"
API = "https://api.topolift.ai"
Dialect = "https://api.topolift.ai/v1/dialect"

[project.scripts]
topolift-mcp = "topolift_mcp.server:main"
topolift-mcp-http = "topolift_mcp.server:main_http"

[tool.hatch.build.targets.wheel]
packages = ["topolift_mcp"]
